[project]
name = "unofficial-ai-twinkle-website"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.33.0",
    "ipython>=8.37.0",
    "marimo>=0.15.2",
    "openai>=1.106.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]
